--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,7 @@
 body {
+  /*background-image: url('/static/img/bg.jpg');
+  background-position:center; 
+  background-repeat: no-repeat;*/
   background-color: #1F2D3D; 
   color: #C0CCDA;
 }
